# path-tracer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.cache/clangd/index/: add_mat.cu.40BBF88CDC2F6505.idx  add_matrix.cu.DB1DC9FEB0E99065.idx  add_vec.cu.B610493FA2569B8E.idx  controller.cpp.B6C8260F610F0CAC.idx  cross_3d_vec.cu.BD6EDEC2214D58C1.idx  det_mat.cu.72B3ECABB445C7EF.idx  det_matrix.cu.6DEFE179233D9F97.idx  dot_vec.cu.1B4556851E1FEE1C.idx  equate_ray.cu.D53ED5C7DB461F13.idx  equate_vec.cu.7CBC668AD3B9C49F.idx  get_point.cu.F1D73327B096961F.idx  mag_vec.cu.0749F625C2F1F94F.idx  main.cpp.708D138FA1501C62.idx  main.cpp.DC98EDE9EABAC807.idx  mat.cuh.0E41EC049B32F634.idx  matrix.cu.33130BE344DF3017.idx  matrix.cuh.865AB39817A0BC29.idx  mult_mat.cu.6ECF7AFDD218F0AE.idx  mult_matrix.cu.1E0CB6E966B05065.idx  plane_intersect.cu.A77CC30080857EE9.idx  precision.cuh.E72B57138EBCC46F.idx  ray.cpp.8D7C216CCAAAFEF8.idx  ray.cu.B3F45CBDE50542BE.idx  ray.cuh.1693CA815B9349B8.idx  ray.h.AFC6B808EE73EC7A.idx  ray_io.cpp.9F46C28BA2C0AC67.idx  ray_struct.cpp.C7AE8F91F5F8A6AE.idx  ray_struct.h.1CA05EE3465CB562.idx  reflect_ray.cu.EF2234BFDA199328.idx  scale_mat.cu.36E1855BE6CBEB39.idx  scale_matrix.cu.BC6136CD65DF0DFE.idx  scale_vec.cu.B87916F5B242F4E5.idx  test.h.1F787C6D33F62C72.idx  (+22 more)
lib/: CMakeLists.txt
lib/asio/: CMakeLists.txt
lib/common/: CMakeLists.txt
lib/mat/: CMakeLists.txt  README.md
lib/matrix/: CMakeLists.txt
lib/ray/: CMakeLists.txt
lib/test/: CMakeLists.txt
src/: CMakeLists.txt  README.md  main.cpp
src/http-server/: README.md  controller.cpp
(+40 files in other folders)
